--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-"Juarez Junior" 
+Hello, I’m Juarez. I’m a Principal Developer Advocate and Oracle Blockchain Evangelist for the EMEA region. I work for Oracle and I Iive in Dublin, Ireland.
+
+My current interests are:
+
+#Blockchain #Hyperledger #Ethereum #Corda #Java #Go #Solidity #Kotlin #Cloud #DevOps #Docker #Kubernetes Microservices #IoT #Mobile #AI #SolutionsArchitecture #SoftwareArchitecture #Startups
+
+Feel free to contact me! Thanks!
