--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
-Hello, I’m Juarez. I’m a Principal Developer Advocate and Oracle Blockchain Evangelist for the EMEA region. I work for Oracle and I Iive in Dublin, Ireland.
+<!DOCTYPE html>
+<html>
 
-My current interests are:
+<head>
+<meta charset="UTF-8">
+<meta name="description" content="#Blockchain #IoT #AI #CloudNative #Kubernetes #Microservices #App #Apps #AppDev #Java #Golang #Python">
+<meta name="keywords" content="#Blockchain #IoT #AI #CloudNative #Kubernetes #Microservices #App #Apps #AppDev #Java #Golang #Python">
+<meta name="author" content="Juarez Alvares Barbosa Junior @juarezjunior">  
 
-#Blockchain #Hyperledger #Ethereum #Corda #Java #Go #Solidity #Kotlin #Cloud #DevOps #Docker #Kubernetes Microservices #IoT #Mobile #AI #SolutionsArchitecture #SoftwareArchitecture #Startups
+<title>Juarez Alvares Barbosa Junior</title>
+</head>
 
-Feel free to contact me! Thanks!
+<body>
+    <img src="https://avatars2.githubusercontent.com/u/7894345?s=400&v=4" alt="Juarez Alvares Barbosa Junior" height="345" width="345">
+    <a href="https://about.me/juarezjunior">Juarez Barbosa Junior, Principal Developer Advocate - ORACLE</a>
+</body>
+
+</html>
